--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,14 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="mycontent">
+    <ion-header>
+      <ion-navbar color="primary">
+        <ion-title>Main Menu</ion-title>
+      </ion-navbar>
+    </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item menuClose detail-none>Close Menu</ion-item>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav [root]="rootPage" #mycontent></ion-nav>
