--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,50 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.no-scroll .scroll-content{
+    overflow: hidden;
+}
+
+.item-md {
+    color: #4c4c4c;
+}
+
+#profile {
+    width: 100%;
+    height: 250px;
+    position: relative;
+    text-align: center;
+    background: url("../assets/images/bg-profile.jpg") no-repeat -4px -102px;
+}
+
+#overlay {
+    position: absolute;
+    background: rgba(0,0,0,0.5);
+    width: 100%;
+    height: 100%;
+}
+
+#profile-image {
+    border-radius: 50%;
+    background: url(../assets/images/profile-pic.jpg) no-repeat -110px -3px;
+    background-size: 255px 135px;
+    position: absolute;
+    border: 3px solid #DDD;
+    width: 100px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 70px;
+}
+
+#profile-info {
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 182px;
+    position: absolute;
+    color: #FFF;
+}
